--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -4,3 +4,25 @@
 
 body
   color blue
+  
+#canvas
+  width 600px
+  height 300px
+  
+  position relative
+  margin 20px
+
+  border 1px solid black
+
+.row
+  display flex
+  width 100%
+
+.column
+  display flex
+  flex-direction column
+  height 100%
+
+.centered
+  justify-content center
+  align-items center
