Implement SAT Collision system (broken)

--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -27,3 +27,9 @@ body
 .centered
   justify-content center
   align-items center
+
+#score
+  width 400px
+  
+#players
+  justify-content space-around
